redesign navbar and background

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -161,10 +161,7 @@
             <div class="about-video">
               <div class="single-video">
                 <a
-                  href="https://youtu.be/ng4vA7_XldA"
-                  data-autoplay="true"
-                  data-vbtype="video"
-                  class="venobox"
+                  href="https://www.youtube.com/watch?v=SlhESAKF1Tk"
                 >
                   <!--change video url-->
                   <i class="fa fa-play"></i>
