--- a/src/main/resources/templates/product-recommendation.html
+++ b/src/main/resources/templates/product-recommendation.html
@@ -34,124 +34,19 @@
       z-index: -2;
       height: 100%;
       width: 100%;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(https://cdn.wperp.com/uploads/2019/08/231-1920x768.png);
+      background-color: #282A3A;
       background-position: center;
       background-size: cover;
       position: absolute;
     }
 
-    /*****************************************************************/
-    header {
-      box-sizing: border-box;
-      backdrop-filter: blur(10px);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 3%;
-      color: white;
-    }
-
-    .nav__links li a {
-      color: black;
-      background-color: rgba(0, 136, 169, 1);
-      backdrop-filter: blur(10px);
-      border: #777;
-      border-radius: 50px;
-      cursor: pointer;
-      transition: all 0.3s ease 0s;
-      text-decoration: none;
-      font-size: 14px;
-      padding: 9px 6px;
-    }
-
-    .input-opt {
-      padding: 9px 5px;
-      background-color: rgba(0, 136, 169, 1);
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      transition: all 0.3s ease 0s;
-    }
-    .input-opt optgroup {
-      padding: 9px 5px;
-      background-color: rgba(0, 136, 169, 1);
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      transition: all 0.3s ease 0s;
-    }
-
-    header button:hover {
-      background-color: rgba(0, 136, 169, 0.8);
-    }
-
-    .nav__links {
-      list-style: none;
-    }
-
-    .nav__links li {
-      display: inline-block;
-      padding: 0px 20px;
-    }
-
-    .nav__links li a {
-      transition: all 0.3s ease 0s;
-    }
-
-    .nav__links li a:hover {
-      color: white;
-    }
-
-    .dropdown{
-      color: black;
-      background-color: rgba(0, 136, 169, 1);
-      display: inline-block;
-      position: relative;
-      font-size: 16px;
-      padding: 9px 20px;
-    }
-    .dropdown-options {
-      z-index: 1;
-      color: black;
-      background-color: rgba(0, 136, 169, 1);
-      width: 119px;
-      font-size: 14px;
-      padding: 15px 15px 15px 15px;
-      right: 0;
-      text-align: center;
-      display: none;
-      position: absolute;
-      overflow: auto;
-      border-radius:5px;
-      box-shadow: 0 10px 10px 0 rgba(0,0,0,0.4);
-    }
-    .dropdown-options a{
-      z-index: 1;
-      display: block;
-      color: #000000;
-      text-decoration: none;
-      padding:17px 10px;
-    }
-
-    .dropdown-options a:hover {
-      color: #0a0a23;
-      background-color: white;
-    }
-
-    .dropdown:hover .dropdown-options {
-      display: block;
-      background-color: rgba(0, 136, 169, 0.8);
-      text-align: center;
-    }
-    /*****************************************************************/
 
     .form-box {
-      z-index: -1;
+      z-index: 0;
       width: 92%;
       height: 80%;
       position: relative;
-      margin: 1% auto;
+      margin: 100px auto 1% auto;
       background-color: #ffff;
       padding: 5px;
       overflow-x: hidden;
@@ -219,6 +114,25 @@
       border-bottom: 2px solid #ffad06;
     }
 
+    .nav li a{
+      color: whitesmoke;
+      font-weight: bold;
+      font-size: 1.2em;
+    }
+    .nav li a:hover,
+    .nav li a:checked,
+    .nav li a:active{
+      background-color: transparent;
+    }
+
+    .navbar-header{
+      margin-top: 5px;
+    }
+
+    header{
+      height: 55px;
+    }
+
   </style>
 
 
@@ -279,18 +193,28 @@
       <table class="content-table table table-bordered table-striped " id="productinquiry-table">
         <thead>
         <tr>
-          <th>Image</th>
           <th>Id</th>
-          <th>Count</th>
-
+          <th>Code</th>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Category</th>
+          <th>Details</th>
+          <div>
+            <th>Action</th>
+          </div>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="categoryCountList:${categoryCountList}">
-          <td><img th:src="@{/images/bg.png}" style="width: 100px; height: 100px"/></td>
-          <td th:text="${categoryCountList.key}"/>
-          <td th:text="${categoryCountList.value}"/>
-
+        <tr th:each="product:${product}">
+          <td th:text="${product.id}"/>
+          <td th:text="${product.productCode}"/>
+          <td th:text="${product.productName}"/>
+          <td th:text="${product.price}"/>
+          <td th:text="${product.productCategory}"/>
+          <td th:text="${product.details}"/>
+          <td>
+            <a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}" class="btn btn-info">Inquiry</a>
+          </td>
 
         </tr>
 
