--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -718,7 +718,7 @@
 
       new Chart(ctx, {
 
-        type: "doughnut",
+        type: "bar",
         data: {
           labels: labels,
           datasets: [
