--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -686,21 +686,21 @@
       </form>
     </form>
   </div>
-  <div th:if="${!user.getIsPopupShowed()}" th:object="${user}">
-    <script>
-      function openForm() {
-        document.getElementById("myForm").style.display = "block";
-      }
+<!--  <div th:if="${!user.getIsPopupShowed()}" th:object="${user}">-->
+<!--    <script>-->
+<!--      function openForm() {-->
+<!--        document.getElementById("myForm").style.display = "block";-->
+<!--      }-->
 
-      setTimeout("openForm()", 5000);
+<!--      setTimeout("openForm()", 5000);-->
 
 
-      function closeForm() {
-        document.getElementById("myForm").style.display = "none";
-      }
-    </script>
+<!--      function closeForm() {-->
+<!--        document.getElementById("myForm").style.display = "none";-->
+<!--      }-->
+<!--    </script>-->
 
-  </div>
+<!--  </div>-->
 
   <script
           src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
