--- a/src/main/resources/templates/dashboard-for-user.html
+++ b/src/main/resources/templates/dashboard-for-user.html
@@ -458,8 +458,8 @@
       </div>
       <div class="card">
         <div class="box">
-          <h1 th:text="${userCount}">53</h1>
-          <h3>Users</h3>
+          <h1 th:text="${inquiryCount}">53</h1>
+          <h3>Inquiry</h3>
         </div>
         <div class="icon-case">
           <i class="fa-solid fa-users fa-3x icons"></i>
@@ -467,8 +467,8 @@
       </div>
       <div class="card">
         <div class="box">
-          <h1 th:text="${productCategoryCount}"></h1>
-          <h3>Category</h3>
+          <h1 th:text="${complaintCount}"></h1>
+          <h3>Complaint</h3>
         </div>
         <div class="icon-case">
           <i class="fa-solid fa-bars fa-3x icons"></i>
