--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -58,50 +58,30 @@
           <div class="col-md-12">
             <div class="main-menu">
               <div class="navbar navbar-cus">
-                <div class="navbar-header">
-                  <a href="index.html" class="navbar-brand"
-                    >ZE<span>CRM</span></a
-                  >
-                  <!--edit site name or logo-->
-                  <button
-                    type="button"
-                    class="navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-collapse"
-                  >
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                </div>
+                <a href="index.html" class="navbar-brand">ZE<span>CRM</span></a>
 
                 <div class="navbar-collapse collapse">
                   <nav>
-                    <ul class="nav navbar-nav navbar-right">
-                      <li class="active">
-                        <a class="smooth-menu" href="#home">Home</a>
-                      </li>
-                      <li><a class="smooth-menu" href="#about">About</a></li>
-                      <li>
-                        <a class="smooth-menu" href="#trainer">Trainers</a>
-                      </li>
-                      <li>
-                        <a class="smooth-menu" href="#services">Services</a>
-                      </li>
-                      <li>
-                        <a class="smooth-menu" href="#testimonial"
-                          >Testimonial</a
-                        >
-                      </li>
-                      <li>
-                        <a class="smooth-menu" href="#pricing">Pricing</a>
-                      </li>
-                      <li><a class="smooth-menu" href="#blog">Blog</a></li>
-                      <li>
-                        <a class="smooth-menu" href="#contact">Contact</a>
-                      </li>
-                    </ul>
+                    <!--ADMIN NAVBAR-->
+                    <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                      <ul class="nav navbar-nav navbar-right">
+                        <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
+                        <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+                        <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
+                        <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
+                      </ul>
+                    </div>
+
+                    <!--ADMIN NAVBAR-->
+                    <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+                      <ul class="nav navbar-nav navbar-right">
+                        <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
+                        <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+                        <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+                        <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
+                      </ul>
+                    </div>
                   </nav>
                 </div>
               </div>
