--- a/src/main/resources/templates/product-recommendation.html
+++ b/src/main/resources/templates/product-recommendation.html
@@ -147,7 +147,7 @@
         <div class="col-md-12">
           <div class="main-menu">
             <div class="navbar navbar-cus">
-              <a href="index.html" class="navbar-brand">ZE<span>CRM</span></a>
+              <a th:href="@{/api/v1/dashboard/main}" class="navbar-brand">ZE<span>CRM</span></a>
 
               <div class="navbar-collapse collapse">
                 <nav>
@@ -161,7 +161,7 @@
                     </ul>
                   </div>
 
-                  <!--ADMIN NAVBAR-->
+                  <!--USER NAVBAR-->
                   <div sec:authorize="hasAnyAuthority('ROLE_USER')">
                     <ul class="nav navbar-nav navbar-right">
                       <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
@@ -169,6 +169,7 @@
                       <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
                       <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
                       <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
+                      <li><a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Product Recommendation</a></li>
                     </ul>
                   </div>
                 </nav>
