--- a/src/main/resources/templates/product-inquiry-list-by-username.html
+++ b/src/main/resources/templates/product-inquiry-list-by-username.html
@@ -52,12 +52,6 @@
       overflow-x: hidden;
       overflow-y: auto;
     }
-    span {
-      color: #777;
-      font-size: 12px;
-      bottom: 66px;
-      position: absolute;
-    }
 
     .title {
       text-align: center;
@@ -133,6 +127,24 @@
       height: 55px;
     }
 
+
+    .navbar-brand {
+      padding: 15px 0;
+      text-transform: uppercase;
+      font-size: 25px;
+      display: block;
+      color: #ffffff;
+      font-weight: 800;
+    }
+
+    .navbar-brand:focus,
+    .navbar-brand:hover {
+      text-decoration: none;
+      color: #ffffff;
+    }
+    .navbar-brand span {
+      color: #ec3642;
+    }
   </style>
 
 
