--- a/src/main/resources/templates/raise-complaint.html
+++ b/src/main/resources/templates/raise-complaint.html
@@ -116,12 +116,6 @@
     .check-box {
       margin: 30px 10px 30px 0;
     }
-    span {
-      color: #777;
-      font-size: 12px;
-      bottom: 66px;
-      position: absolute;
-    }
     #login {
       left: 50px;
     }
@@ -165,6 +159,24 @@
 
     header{
       height: 55px;
+    }
+
+    .navbar-brand {
+      padding: 15px 0;
+      text-transform: uppercase;
+      font-size: 25px;
+      display: block;
+      color: #ffffff;
+      font-weight: 800;
+    }
+
+    .navbar-brand:focus,
+    .navbar-brand:hover {
+      text-decoration: none;
+      color: #ffffff;
+    }
+    .navbar-brand span {
+      color: #ec3642;
     }
 
   </style>
