background image and delete complaint for admin

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,7 @@
       height: 100%;
       width: 100%;
       background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(https://cdn.wperp.com/uploads/2019/08/231-1920x768.png);
+      url(https://cobac.work/content/files/crm-muster-7b55b740.webp);
       background-position: center;
       background-size: cover;
       position: absolute;
